fixed some codes on correlation_for_all_farms file

--- a/correlation-for-all-farms.ipynb
+++ b/correlation-for-all-farms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "4cfb507d-ef1c-41fe-934a-7c0ecbf4b810",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "a8133337-11c6-4516-badd-478181877cdf",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
        "672                 3.0           Karmøy til Sotra  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,16 +533,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "2dbe8dbb-ca8a-4f05-9013-11551341b546",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "00248db0-45c9-4557-bb35-4c1063521145",
    "metadata": {},
    "outputs": [
     {
@@ -653,13 +645,35 @@
        "4                -0.184999  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Compute the correlation and include latitude and longitude for the remaining fish farms\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Assuming 'full_data_cleaned' is your original dataset\n",
+    "\n",
+    "# Identify fish farms with only one data point\n",
+    "fish_farms_single_data_point = full_data_cleaned['Location number'].value_counts()[full_data_cleaned['Location number'].value_counts() == 1].index.tolist()\n",
+    "\n",
+    "# Identify fish farms with zero standard deviation\n",
+    "fish_farms_zero_std = full_data_cleaned.groupby('Location number').filter(\n",
+    "    lambda group: group['Sea temperature'].std() == 0 or \n",
+    "                  group['Adult female lice'].std() == 0 or \n",
+    "                  group['Lice in moving stages'].std() == 0 or \n",
+    "                  group['Attached lice'].std() == 0)\n",
+    "fish_farms_zero_std_unique = fish_farms_zero_std['Location number'].unique().tolist()\n",
+    "\n",
+    "# Combine both lists\n",
+    "fish_farms_to_exclude = list(set(fish_farms_single_data_point + fish_farms_zero_std_unique))\n",
+    "\n",
+    "# Filter out these fish farms from the dataset\n",
+    "filtered_data_refined = full_data_cleaned[~full_data_cleaned['Location number'].isin(fish_farms_to_exclude)]\n",
+    "\n",
+    "# Then proceed with your existing code for computing correlation\n",
     "correlation_data_refined = filtered_data_refined.groupby('Location number').apply(\n",
     "    lambda group: pd.Series({\n",
     "        'Location name': group['Location name'].iloc[0],  # Taking the first value\n",
@@ -670,11 +684,19 @@
     "        'Corr with Attached lice': group[['Sea temperature', 'Attached lice']].corr().iloc[0, 1]\n",
     "    })\n",
     ")\n",
-    "\n",
-    "# Reset index for clarity\n",
     "correlation_data_refined.reset_index(inplace=True)\n",
     "\n",
     "correlation_data_refined.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31e2d081",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "correlation_data_refined.to_csv('./correlation_data_output.csv',index=False)"
    ]
   },
   {
@@ -685,129 +707,6 @@
    "outputs": [],
    "source": [
     "correlation_data= pd.read_csv('./correlation_data_output.csv')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "96682826",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Location number</th>\n",
-       "      <th>Location name</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lon</th>\n",
-       "      <th>Corr with Adult female lice</th>\n",
-       "      <th>Corr with Lice in moving stages</th>\n",
-       "      <th>Corr with Attached lice</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>10029</td>\n",
-       "      <td>Tuholmane Ø</td>\n",
-       "      <td>59.371235</td>\n",
-       "      <td>5.216333</td>\n",
-       "      <td>-0.161184</td>\n",
-       "      <td>0.233384</td>\n",
-       "      <td>0.160236</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10041</td>\n",
-       "      <td>Kviksholmen</td>\n",
-       "      <td>60.054317</td>\n",
-       "      <td>5.090733</td>\n",
-       "      <td>0.038425</td>\n",
-       "      <td>-0.080473</td>\n",
-       "      <td>-0.207258</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10045</td>\n",
-       "      <td>Eidholmen</td>\n",
-       "      <td>60.088080</td>\n",
-       "      <td>5.120633</td>\n",
-       "      <td>-0.276335</td>\n",
-       "      <td>-0.121653</td>\n",
-       "      <td>-0.301007</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>10050</td>\n",
-       "      <td>Ospøy Ø</td>\n",
-       "      <td>59.866566</td>\n",
-       "      <td>5.228133</td>\n",
-       "      <td>-0.067351</td>\n",
-       "      <td>0.034284</td>\n",
-       "      <td>-0.086674</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10054</td>\n",
-       "      <td>Tobbeholmane</td>\n",
-       "      <td>60.025580</td>\n",
-       "      <td>5.309083</td>\n",
-       "      <td>0.033924</td>\n",
-       "      <td>-0.061239</td>\n",
-       "      <td>-0.184999</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Location number Location name        Lat       Lon   \n",
-       "0            10029   Tuholmane Ø  59.371235  5.216333  \\\n",
-       "1            10041   Kviksholmen  60.054317  5.090733   \n",
-       "2            10045     Eidholmen  60.088080  5.120633   \n",
-       "3            10050       Ospøy Ø  59.866566  5.228133   \n",
-       "4            10054  Tobbeholmane  60.025580  5.309083   \n",
-       "\n",
-       "   Corr with Adult female lice  Corr with Lice in moving stages   \n",
-       "0                    -0.161184                         0.233384  \\\n",
-       "1                     0.038425                        -0.080473   \n",
-       "2                    -0.276335                        -0.121653   \n",
-       "3                    -0.067351                         0.034284   \n",
-       "4                     0.033924                        -0.061239   \n",
-       "\n",
-       "   Corr with Attached lice  \n",
-       "0                 0.160236  \n",
-       "1                -0.207258  \n",
-       "2                -0.301007  \n",
-       "3                -0.086674  \n",
-       "4                -0.184999  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "correlation_data.head()"
    ]
   },
   {
